--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# DATASETS
+/src/datasets/
+
+# ZONE.IDENTIFIER
+*Zone.Identifier
+
+# ZIP
+*.zip
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
