--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "datasets>=3.4.1",
+    "openai>=1.69.0",
+    "pandas>=2.2.3",
+    "python-dotenv>=1.1.0",
 ]
